--- a/404.md
+++ b/404.md
@@ -1,2 +1,3 @@
 ## Not Found
 #### File or path page not found.
+<script>Array.from(document.getElementsByTagName('header')[0].children).map(p => p.href='/')</script>
