--- a/404.md
+++ b/404.md
@@ -1,2 +1,3 @@
 ## Not Found
 #### File or path page not found.
+<script>if(location.pathname.split('/')[1]=='resolve'&&location.pathname.split('/')[2].length==33&&location.pathname.split('/')[3]==undefined){document.title=document.title.replace('Not Found','Google Drive Resolve Failed');document.getElementsByTagName('section')[0].innerHTML='<p style="margin:0">The specified file ID has not been saved as a resolve link</p><div class="filedownload-container"><i class="material-icons">add_to_drive</i><a href="https://drive.google.com/file/d/'+location.pathname.split('/')[2]+'/view">View file ID on Google Drive</a></div>'}</script>
